Исправление некоторых визуальных частей, надеюсь к лучшему

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         </div>
 
         
-            <section class="masters section">
+            <section class="masters">
                 <!--OUR TEAM-->
                 <div class="container">
                     <h2 class="our-team-tittle">Наша команда</h2>
