Еще одна попытка исправить ситуацию

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         </div>
 
         
-            <section class="masters">
+            <section class="employees">
                 <!--OUR TEAM-->
                 <div class="container">
                     <h2 class="our-team-tittle">Наша команда</h2>
@@ -176,7 +176,6 @@
         </div>
     
     </footer>
-
 
 </body>
 
