Corrections to HW 3
- Adding new margins and paddings

- Relocation tags section

--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
     <!--EXAMPLES-OF-WORK-->
     <main>
         <!--PORTFOLIO-EXAMPLES-LIST-BUTTONS-->
-        <section>
+        <section class="section-portfolio-items">
             <div class="container">
                 <!--Section Projects-->
                 <div class="projects-list-buttons">
